The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: Promoted the positional `Buf.Indexed` API to be a first-class
    part of `c.t.io.Buf`. If you have a custom implementation of `Buf` it
    will require some effort to become compatible. ``RB_ID=907231``

API Changes:

  * util-core: Remove deprecated `c.t.io.ConcatBuf` which is replaced by
    `c.t.io.Buf.apply(Iterable[Buf])`. ``RB_ID=907180``

  * util-core: Remove deprecated `c.t.util.RingBuffer`. Use Guava's
    `EvictingQueue`. ``RB_ID=907516``

  * util-core: Remove deprecated `c.t.concurrent.ConcurrentPool`. Prefer
    Finagle's `c.t.f.pool.BufferingPool`. ``RB_ID=907516``

  * util-core: Remove deprecated `c.t.concurrent.ConcurrentMultiMap`. Prefer
    Guava's Multimap. ``RB_ID=907516``

Dependencies:

  * util: Bump guava to 19.0. ``RB_ID=907807``

6.41.0  2017-02-03

New Features:

  * util-app: App now exposes `closeOnExit` publicly.

  * util-core: Add Java-friendly API to Scala.java for converting from
    a Java 8 `Optional` to a Scala `Option`. ``RB_ID=906512``

  * util-core: Introduced a positional `Buf` API, `Buf.Indexed`, and retrofitted
    all existing implementations in util and finagle to adopt it. It is now used
    throughout for a reductions in allocation and latency. In two services at
    Twitter we saw a 1–2% reduction in allocations. We plan to open the API to
    the public and make it a part of `Buf` once we are confident in the APIs.
    ``RB_ID=904559`` ``RB_ID=905253`` ``RB_ID=906201``

  * util-slf4j-api: Introduce slf4j-api support into util. This includes a
    small scala wrapper over the `org.slf4j.Logger` and a scala-friendly
    `Logging` trait. Changes also include the util-slf4j-jul-bridge module which
    is a library that provides a utility to "smartly" install the
    Slf4jBridgeHandler. ``RB_ID=900815``

Runtime Behavior Changes:
